feat: test fixes